--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Profile Picture -->
     <section id="profile" class="section">
       <div class="section-inner">
-          <img src="https://via.placeholder.com/150" alt="Foto de Perfil" class="profile-pic">
+          <img src="./1736455700123.jpeg" alt="Foto de Perfil" class="profile-pic">
       </div>
     </section>
     <!-- SOBRE -->
