--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
 
           <article class="card">
             <div class="card-tags">
-              <span>Python</span>
+              <span>PHP</span>
               <span>Cadastro</span>
               <span>Ativos</span>
             </div>
             <h3>Gerenciador de Ativos</h3>
             <p>
-              Sistema em Python para cadastro e organização de máquinas e equipamentos de TI.
+              Sistema em PHP para cadastro e organização de máquinas e equipamentos de TI.
             </p>
             <a href="https://github.com/CarlosAndreOliveiraPereira/gerenciador_de_ativos" target="_blank" class="btn">
               Ver no GitHub
