--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             <span class="badge">AWS</span>
             <span class="badge">Microsoft 365</span>
             <span class="badge">Python</span>
+            <span class="badge">PHP</span>
             <span class="badge">SQL</span>
           </div>
           <div class="hero__actions">
