--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
           <p class="eyebrow">Infraestrutura · Suporte · Dados</p>
           <h1 class="hero__title">Carlos Andre Oliveira Pereira</h1>
           <p class="hero__lead">
-            Profissional de tecnologia especializado em infraestrutura de TI,
-            suporte a usuários via Movidesk, ambientes em nuvem AWS e bancos de
-            dados. Estudante de Big Data na UniCesumar, com foco em dados e
-            automação de processos.
+           técnico em infraestrutura de TI, suporte a usuários via Movidesk, bancos de dados. Estudante de Big Data na UniCesumar, com foco em dados e automação de processos.
           </p>
           <div class="hero__badges">
             <span class="badge">AWS</span>
